--- a/Assembly-CSharp.Player.csproj
+++ b/Assembly-CSharp.Player.csproj
@@ -607,22 +607,23 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\QuickOutline\Scripts\Outline.cs" />
-    <Compile Include="Assets\Scripts\Attack.cs" />
-    <Compile Include="Assets\Scripts\AttackMode.cs" />
-    <Compile Include="Assets\Scripts\CameraController.cs" />
-    <Compile Include="Assets\Scripts\GameUtils.cs" />
-    <Compile Include="Assets\Scripts\GridGuide.cs" />
-    <Compile Include="Assets\Scripts\Moviment.cs" />
-    <Compile Include="Assets\Scripts\Player.cs" />
-    <Compile Include="Assets\Scripts\Round.cs" />
-    <Compile Include="Assets\Scripts\Tile.cs" />
-    <Compile Include="Assets\Scripts\UIController.cs" />
+    <Compile Include="Assets\Resources\QuickOutline\Scripts\Outline.cs" />
+    <Compile Include="Assets\Resources\Scripts\Attack.cs" />
+    <Compile Include="Assets\Resources\Scripts\AttackMode.cs" />
+    <Compile Include="Assets\Resources\Scripts\CameraController.cs" />
+    <Compile Include="Assets\Resources\Scripts\FloatingText.cs" />
+    <Compile Include="Assets\Resources\Scripts\GameUtils.cs" />
+    <Compile Include="Assets\Resources\Scripts\GridGuide.cs" />
+    <Compile Include="Assets\Resources\Scripts\Moviment.cs" />
+    <Compile Include="Assets\Resources\Scripts\Player.cs" />
+    <Compile Include="Assets\Resources\Scripts\Round.cs" />
+    <Compile Include="Assets\Resources\Scripts\Tile.cs" />
+    <Compile Include="Assets\Resources\Scripts\UIController.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Assets\QuickOutline\Readme.txt" />
-    <None Include="Assets\QuickOutline\Resources\Shaders\OutlineFill.shader" />
-    <None Include="Assets\QuickOutline\Resources\Shaders\OutlineMask.shader" />
+    <None Include="Assets\Resources\QuickOutline\Readme.txt" />
+    <None Include="Assets\Resources\QuickOutline\Resources\Shaders\OutlineFill.shader" />
+    <None Include="Assets\Resources\QuickOutline\Resources\Shaders\OutlineMask.shader" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
