--- a/Assembly-CSharp.Player.csproj
+++ b/Assembly-CSharp.Player.csproj
@@ -612,6 +612,7 @@
     <Compile Include="Assets\Resources\Scripts\Battle.cs" />
     <Compile Include="Assets\Resources\Scripts\CameraController.cs" />
     <Compile Include="Assets\Resources\Scripts\Champions\Dilma.cs" />
+    <Compile Include="Assets\Resources\Scripts\Champions\MamaeFalei.cs" />
     <Compile Include="Assets\Resources\Scripts\Champions\Temer.cs" />
     <Compile Include="Assets\Resources\Scripts\FloatingText.cs" />
     <Compile Include="Assets\Resources\Scripts\GameUtils.cs" />
