--- a/Assembly-CSharp.Player.csproj
+++ b/Assembly-CSharp.Player.csproj
@@ -611,6 +611,7 @@
     <Compile Include="Assets\Resources\Scripts\AttackMode.cs" />
     <Compile Include="Assets\Resources\Scripts\Battle.cs" />
     <Compile Include="Assets\Resources\Scripts\CameraController.cs" />
+    <Compile Include="Assets\Resources\Scripts\Champions\Aecio.cs" />
     <Compile Include="Assets\Resources\Scripts\Champions\Bolsonaro.cs" />
     <Compile Include="Assets\Resources\Scripts\Champions\Dilma.cs" />
     <Compile Include="Assets\Resources\Scripts\Champions\Lula.cs" />
@@ -624,9 +625,16 @@
     <Compile Include="Assets\Resources\Scripts\Obstacle.cs" />
     <Compile Include="Assets\Resources\Scripts\Obstacles\AirBag.cs" />
     <Compile Include="Assets\Resources\Scripts\Obstacles\Bull.cs" />
+    <Compile Include="Assets\Resources\Scripts\Obstacles\Prepare.cs" />
     <Compile Include="Assets\Resources\Scripts\Obstacles\Triplex.cs" />
     <Compile Include="Assets\Resources\Scripts\Player.cs" />
     <Compile Include="Assets\Resources\Scripts\Round.cs" />
+    <Compile Include="Assets\Resources\Scripts\Skills\Basic.cs" />
+    <Compile Include="Assets\Resources\Scripts\Skills\Skill.cs" />
+    <Compile Include="Assets\Resources\Scripts\Skills\Ultimate.cs" />
+    <Compile Include="Assets\Resources\Scripts\Team.cs" />
+    <Compile Include="Assets\Resources\Scripts\TeamController.cs" />
+    <Compile Include="Assets\Resources\Scripts\TeamSplit.cs" />
     <Compile Include="Assets\Resources\Scripts\Tile.cs" />
     <Compile Include="Assets\Resources\Scripts\UIController.cs" />
   </ItemGroup>
