--- a/Assembly-CSharp.Player.csproj
+++ b/Assembly-CSharp.Player.csproj
@@ -257,6 +257,9 @@
     <Reference Include="Unity.Rider.Editor">
       <HintPath>Library/ScriptAssemblies/Unity.Rider.Editor.dll</HintPath>
     </Reference>
+    <Reference Include="Unity.2D.Sprite.Editor">
+      <HintPath>Library/ScriptAssemblies/Unity.2D.Sprite.Editor.dll</HintPath>
+    </Reference>
     <Reference Include="UnityEditor.UI">
       <HintPath>Library/ScriptAssemblies/UnityEditor.UI.dll</HintPath>
     </Reference>
@@ -632,6 +635,7 @@
     <Compile Include="Assets\Resources\Scripts\Skills\Basic.cs" />
     <Compile Include="Assets\Resources\Scripts\Skills\Skill.cs" />
     <Compile Include="Assets\Resources\Scripts\Skills\Ultimate.cs" />
+    <Compile Include="Assets\Resources\Scripts\Stamina.cs" />
     <Compile Include="Assets\Resources\Scripts\Team.cs" />
     <Compile Include="Assets\Resources\Scripts\TeamController.cs" />
     <Compile Include="Assets\Resources\Scripts\TeamSplit.cs" />
